keep track of the closet page we are importing, even if it errored out

--- a/app/views/closet_pages/new.html.haml
+++ b/app/views/closet_pages/new.html.haml
@@ -3,6 +3,7 @@
   = link_to 'Back to Your Items', user_closet_hangers_path(current_user), :id => 'back-to-items'
 
 = form_for @closet_page, :html => {:id => 'closet-page-form'} do |f|
+  = f.hidden_field :index
   #closet-page-frame-wrapper
     %span
       %strong Page #{@closet_page.index}
