--- a/app/stylesheets/closet_lists/_form.sass
+++ b/app/stylesheets/closet_lists/_form.sass
@@ -1,4 +1,5 @@
-body.closet_lists-new, body.closet_lists-create
+body.closet_lists-new, body.closet_lists-create, body.closet_lists-edit, body.closet_lists-update
+  +secondary-nav
 
   form ul.fields
     list-style: none
