--- a/app/stylesheets/items/_show.sass
+++ b/app/stylesheets/items/_show.sass
@@ -68,7 +68,7 @@ body.items-show
     float: right
     font-size: 85%
     padding: 1em
-    width: 18em
+    width: 21em
 
     label, header
       display: block
@@ -79,6 +79,9 @@ body.items-show
 
     form
       padding: .5em 0
+
+    select
+      width: 9em
 
     input[type=number]
       width: 4em
