--- a/app/views/closet_hangers/_closet_hanger.html.haml
+++ b/app/views/closet_hangers/_closet_hanger.html.haml
@@ -1,7 +1,7 @@
 - show_controls ||= false # we could do user check here, but may as well do it once
 .object
   = render :partial => 'items/item_link', :locals => {:item => closet_hanger.item}
-  .quantity
+  .quantity{:class => "quantity-#{closet_hanger.quantity}"}
     %span= closet_hanger.quantity
     - if show_controls
       = form_for closet_hanger, :url => user_item_closet_hanger_path(current_user, closet_hanger.item), :html => {:class => 'closet-hanger-update'} do |f|
